DT-15 #resolve Navbar is always visible.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -13,7 +13,7 @@ $fa-font-path:  "../bower_components/font-awesome/fonts";
 }
 
 body {
-  padding: 0;
+  padding: 90px 0 0 0;
 }
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
